<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityMainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkViolet"
    tools:context="com.example.ryan.synthesizerapp.MainActivity">


    <Button

        android:id="@+id/cKey"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:background="@drawable/button_border2"
        android:textColor="@android:color/black"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Button
        android:id="@+id/csKey"
        android:layout_width="32dp"
        android:layout_height="120dp"
        android:text="@string/cSharp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/cKey"
        app:layout_constraintLeft_toRightOf="@id/cKey"/>
    <Button
        android:id="@+id/dKey"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:background="@drawable/button_border2"
        android:textColor="@android:color/black"
        android:text="@string/d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/csKey"/>
    <Button
        android:id="@+id/dsKey"
        android:layout_width="32dp"
        android:layout_height="120dp"
        android:text="@string/dSharp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/cKey"
        app:layout_constraintLeft_toRightOf="@id/dKey"/>
    <Button
        android:id="@+id/eKey"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:background="@drawable/button_border2"
        android:textColor="@android:color/black"
        android:text="@string/e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dsKey"/>
    <Button
        android:id="@+id/fKey"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:background="@drawable/button_border2"
        android:textColor="@android:color/black"
        android:text="@string/f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/eKey"/>
    <Button
        android:id="@+id/fsKey"
        android:layout_width="32dp"
        android:layout_height="120dp"
        android:text="@string/fSharp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/cKey"
        app:layout_constraintLeft_toRightOf="@id/fKey"/>
    <Button
        android:id="@+id/gKey"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:background="@drawable/button_border2"
        android:textColor="@android:color/black"
        android:text="@string/g"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/fsKey"/>
    <Button
        android:id="@+id/gsKey"
        android:layout_width="32dp"
        android:layout_height="120dp"
        android:text="@string/gSharp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/cKey"
        app:layout_constraintLeft_toRightOf="@id/gKey"/>
    <Button
        android:id="@+id/aKey"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:background="@drawable/button_border2"
        android:textColor="@android:color/black"
        android:text="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/gsKey"/>
    <Button
        android:id="@+id/asKey"
        android:layout_width="32dp"
        android:layout_height="120dp"
        android:text="@string/aSharp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/cKey"
        app:layout_constraintLeft_toRightOf="@id/aKey"/>
    <Button
        android:id="@+id/bKey"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:background="@drawable/button_border2"
        android:textColor="@android:color/black"
        android:text="@string/b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/asKey"/>
    <Button
        android:id="@+id/c2Key"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:background="@drawable/button_border2"
        android:textColor="@android:color/black"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bKey"/>


    <Button
        android:id="@+id/pitchUp"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/up"
        android:textSize="22dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/pitchTextView"/>

    <TextView
        android:id="@+id/pitchTextView"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:background="@color/violet"
        android:layout_marginLeft="60dp"
        app:layout_constraintTop_toBottomOf="@id/pitchUp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/pitchLabel"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/pitch"
        android:background="@color/violet"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/pitchTextView"
        app:layout_constraintLeft_toLeftOf="@id/pitchTextView"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/pitchDown"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:text="@string/down"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/pitchLabel"
        app:layout_constraintLeft_toLeftOf="@id/pitchLabel"/>


    <SeekBar
        android:id="@+id/ampSlider"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@android:color/black"
        android:indeterminateTint="@android:color/white"
        android:progressTint="@color/violet"
        android:thumbTint="@color/violet"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toRightOf="@id/pitchTextView"
        app:layout_constraintTop_toTopOf="@+id/pitchTextView"/>
    <TextView
        android:id="@+id/ampLabel"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/amp"
        android:background="@color/violet"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/ampSlider"
        app:layout_constraintLeft_toRightOf="@id/pitchLabel"
        app:layout_constraintBottom_toBottomOf="@id/pitchLabel"
        android:textAlignment="center"/>

    <CheckBox
        android:id="@+id/reverbCheck"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/reverb"
        android:layout_marginLeft="30dp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:buttonTint="@color/violet"
        app:layout_constraintBottom_toBottomOf="@id/pitchUp"
        app:layout_constraintLeft_toRightOf="@id/ampSlider"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/waveGroup"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/reverbCheck"
        app:layout_constraintLeft_toRightOf="@id/ampSlider">


        <RadioButton
            android:id="@+id/sin"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:buttonTint="@color/violet"
            android:text="@string/sin"/>

        <RadioButton
            android:id="@+id/square"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:buttonTint="@color/violet"
            android:text="@string/square"/>

        <RadioButton
            android:id="@+id/saw"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:buttonTint="@color/violet"
            android:text="@string/saw"/>
    </RadioGroup>



</android.support.constraint.ConstraintLayout>
